eshopwebmvc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eshopwebmvc
  labels:
    app: eshopwebmvc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eshopwebmvc
  template:
    metadata:
      labels:
        app: eshopwebmvc
    spec:
      containers:
      - name: eshopwebmvc
        image: eshopregistry.azurecr.io/eshopwebmvc:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: eshopwebmvc-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: eshopwebmvc
