sqlserver.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlserver
  labels:
    app: sqlserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sqlserver
  template:
    metadata:
      labels:
        app: sqlserver
    spec:
      containers:
      - name: sqlserver
        image: mcr.microsoft.com/azure-sql-edge:latest
        ports:
        - containerPort: 1433
        volumeMounts:
        - name: sqlstorage
          mountPath: /var/opt/mssql
        securityContext:
          runAsUser: 0  # Run as root user
      volumes:
      - name: sqlstorage
        persistentVolumeClaim:
          claimName: sqlserver-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sqlserver-service
  labels:
    app: sqlserver
spec:
  type: ClusterIP  # Exposes the service internally within the cluster
  ports:
    - port: 1433
      targetPort: 1433
  selector:
    app: sqlserver
